[project]
authors = [{name = "Catherine Devlin", email = "catherine.devlin@gmail.com"}]
dependencies = []
description = "Divide and play with a live camera feed"
name = "photo-jumblee"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
photo_jumblee = { path = ".", editable = true }

[tool.pixi.tasks]
jumblee = "python src/photo_jumblee/camera.py"

[tool.pixi.feature.test.dependencies]
pytest = "*"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.dependencies]
numpy = ">=2.2.1,<3"
opencv = ">=4.10.0,<5"

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }
